--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,10 @@ h1 {
 }
 
 #printResult {
-    margin-top: 20px;
+    margin-top: 10px;
     font-size: 2.2rem;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 #printCounter, #clickCount, #candyCount {
@@ -90,8 +90,8 @@ span {
 }
 
 .hands div {
-    background-color: transparent;
-    opacity: 0;
+    background-color: salmon;
+
     width: 80px;
     height: 80px;
     border-radius: 50px;
@@ -105,14 +105,14 @@ span {
 #leftHand {
     margin-right: 110px;
     content: url("../img/candy_left.png");
-    opacity: 0;
+
     z-index: 2;
 }
 
 #rightHand {
     margin-left: 110px;
     content: url("../img/candy_right.png");
-    opacity: 0;
+
     z-index: 2;
 }
 
@@ -264,6 +264,7 @@ span {
 @media screen and (max-width: 576px) {
     h1 {
         font-size: 3rem;
+        margin-bottom: 0;
     }
 
     .instruction {
@@ -272,6 +273,83 @@ span {
 
     #numberTries span, #numberCandies span {
         font-size: 2rem;
+
     }
 
+    p {
+        margin: 0;
+    }
+
+}
+
+
+
+@media screen and (max-width: 480px) {
+    #hands {
+        top: 370px;
+    }
+
+    #leftHand {
+        margin-right: 100px;
+    }
+
+    #rightHand {
+        margin-left: 100px;
+    }
+}
+
+@media screen and (max-width: 440px) {
+    #hands {
+        top: 350px;
+    }
+
+    #leftHand {
+        margin-right: 90px;
+    }
+
+    #rightHand {
+        margin-left: 90px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    #hands {
+        top: 320px;
+    }
+
+    #leftHand {
+        margin-right: 70px;
+    }
+
+    #rightHand {
+        margin-left: 70px;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    #hands {
+        top: 300px;
+    }
+
+    #leftHand {
+        margin-right: 50px;
+    }
+
+    #rightHand {
+        margin-left: 50px;
+    }
+}
+
+@media screen and (max-width: 340px) {
+    #hands {
+        top: 280px;
+    }
+
+    #leftHand {
+        margin-right: 30px;
+    }
+
+    #rightHand {
+        margin-left: 30px;
+    }
 }
