--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ span {
     width: 50px;
 }
 
-.imageStatic, .imageShame, .imageHappy {
+.imageStatic, .imageSad, .imageHappy {
     max-width: 100%;
 
 }
@@ -69,8 +69,16 @@ span {
     content: url("../img/static.png");
 }
 
-.imageShame {
-    content: url("../img/none.png");
+.imageSad {
+     content: url("../img/none.png");
+ }
+
+.imageWasRight {
+    content: url("../img/wasRight.png");
+}
+
+.imageWasLeft {
+    content: url("../img/wasLeft.png");
 }
 
 .imageHappy {
@@ -225,23 +233,6 @@ span {
     animation: flickerAnimation 2s infinite;
 }
 
-#dogImg.imageShame {
-    -webkit-animation: fadein 0.2s; /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: fadein 0.2s; /* Firefox < 16 */
-    -ms-animation: fadein 0.2s; /* Internet Explorer */
-    -o-animation: fadein 0.2s; /* Opera < 12.1 */
-    animation: fadein 0.2s;
-
-}
-
-#dogImg.imageHappy {
-    -webkit-animation: fadein 0.2s; /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: fadein 0.2s; /* Firefox < 16 */
-    -ms-animation: fadein 0.2s; /* Internet Explorer */
-    -o-animation: fadein 0.2s; /* Opera < 12.1 */
-    animation: fadein 0.2s;
-}
-
 @keyframes fadein {
     from {
         opacity: 0;
@@ -263,7 +254,7 @@ span {
 
 @media screen and (max-width: 992px) {
 
-    .imageStatic, .imageShame, .imageHappy {
+    .imageStatic, .imageSad, .imageHappy {
         max-width: 300px;
     }
 
